--- a/api/content/models/content.settings.json
+++ b/api/content/models/content.settings.json
@@ -2,7 +2,8 @@
   "kind": "collectionType",
   "collectionName": "contents",
   "info": {
-    "name": "Content"
+    "name": "Content",
+    "description": ""
   },
   "options": {
     "increments": true,
@@ -12,6 +13,31 @@
   "attributes": {
     "Title": {
       "type": "string"
+    },
+    "Value": {
+      "type": "richtext"
+    },
+    "isPublished": {
+      "type": "boolean"
+    },
+    "CoverImage": {
+      "collection": "file",
+      "via": "related",
+      "allowedTypes": [
+        "images",
+        "files",
+        "videos"
+      ],
+      "plugin": "upload",
+      "required": false
+    },
+    "posts": {
+      "collection": "post",
+      "via": "content"
+    },
+    "pages": {
+      "collection": "page",
+      "via": "content"
     }
   }
 }
